# crypto-trading-bot

./: README.md  main.py  price_monitor.py  pyproject.toml  sheets_logger.py  telegram_notifier.py  test_order.py  test_telegram.py  trading.py
attached_assets/: Pasted-1-Bitget-API-Bitget-Futures-API-api-mix-v1-order-placeOrder-API--1741023306522.txt
static/css/: custom.css
static/js/: app.js  balance.js  orderbook.js  tradingview.js
templates/: api_test.html  balance.html  index.html  orderbook.html  tradingview.html  webhook_test.html
